codex-rs/tui/src/app/snapshots/codex_tui__app__tests__app_server_thread_replacement_clears_previous_transcript_before_replay-2.snap
---
source: tui/src/app/tests.rs
expression: rendered
---
╭────────────────────────────────────────╮
│ >_ OpenAI Codex (v0.0.0)               │
│                                        │
│ model:     gpt-test   /model to change │
│ directory: <thread cwd>                │
╰────────────────────────────────────────╯

───────────────────────────────────────────────────────────────────────────────
YOU
│ Next thread prompt
