codex-rs/tui/src/app/snapshots/codex_tui__app__tests__required_stream_reflow_during_capped_initial_replay.snap
---
source: tui/src/app/tests.rs
expression: "rendered.lines.iter().map(rendered_line_text).collect::<Vec<_>>().join(\"\\n\")"
---
latest user question


CODEX
  Final answer:

   Pattern       Outcome
  ━━━━━━━━━━━━  ━━━━━━━━━━━
   Table tail    Preserved
