codex-rs/tui/src/app/snapshots/codex_tui__app__tests__required_stream_reflow_during_capped_initial_replay_survives_transcript_overlay.snap
---
source: tui/src/app/tests.rs
assertion_line: 6888
expression: "rendered.lines.iter().map(rendered_line_text).collect::<Vec<_>>().join(\"\\n\")"
---
Earlier messages are available — press ctrl + t to view the full transcript
  Final answer:

   Pattern       Outcome
  ━━━━━━━━━━━━  ━━━━━━━━━━━
   Table tail    Preserved
───────────────────────────────────────────────────────────────────────────────
